Prefinal changes in thesis.

--- a/thesis/bibliography.bib
+++ b/thesis/bibliography.bib
@@ -87,6 +87,12 @@ publisher = {A book apart},
 year = {2011}
 }
 
+@misc{
+    penjoinstyle,
+    title = "Qt NamespaceReference, \emph{Qt::PenJoinStyle}",
+    author = "Nokia Corporation",
+   	year = {2011},
+    note = {\url{http://doc.qt.digia.com/qt/qt.html#PenJoinStyle-enum}}
+}
 
 
-html5games
