--- a/thesis/implementation/render/state.tex
+++ b/thesis/implementation/render/state.tex
@@ -171,7 +171,7 @@ Istnieje kilka rodzajów pędzli krawędziowych. Każdy z nich posiada inną str
 \end{itemize}
 Wszystkie opcje dostępne w \emph{canvas}.
 
-\item Złączenia (załamania) linii \emph{join}\footnote{http://doc.qt.digia.com/qt/qt.html\#PenJoinStyle-enum}:
+\item Złączenia (załamania) linii \emph{join}\cite{penjoinstyle}:
 \begin{itemize}
 \item \emph{Qt::MiterJoin} (wartość 0x00) \footnote{Wraz z tą wartością parametru musi dodatkowo pojawić się parametr \emph{miter} określający promień zaokrąglania załamań linii.}
 \item \emph{Qt::BevelJoin} (wartość 0x40)
