--- a/thesis/implementation/render_client.tex
+++ b/thesis/implementation/render_client.tex
@@ -1,5 +1,5 @@
 
-Aby umożliwić renderowanie elementów po stronie klienta należało utworzyć wspólny format danych bazując na wejściu ze strony biblioteki Qt oraz potrzebnych danych wyjściowych dla obiektu Canvas w języku HTML5. 
+Aby umożliwić renderowanie elementów po stronie klienta należało utworzyć wspólny format danych bazując na wejściu ze strony biblioteki \emph{Qt} oraz potrzebnych danych wyjściowych dla obiektu \emph{canvas} w języku \emph{HTML5}. 
 
 Każda komenda rysowania po stronie klienta składa się z podstawowych informacji dotyczących rysowanego obiektu, takich jak: identyfikator, pozycja czy rozmiar, oraz listy prostych elementów z których dany obiekt jest złożony (linie, prostokąty, etc.). Listing \ref{lst:draw_example} przedstawia format pojedyńczej komendy rysowania wraz z wszystkimi możliwymi elementami budującymi widgety w aplikacjach opartych o bibliotekę \emph{Qt}.
 
