--- a/thesis/summary/summary.tex
+++ b/thesis/summary/summary.tex
@@ -1,17 +1,17 @@
 Temat pracy inżynierskiej został w pełni zrealizowany, a jej wynikiem jest prototyp serwera oraz webowej aplikacji klienckiej. 
 
-Program serwera udostępnia kod strony WWW, który uruchamiany jest przez przeglądarkę. Uruchamia on również aplikację graficzną opartą o framework Qt oraz odpowiada za utworzenie połączenia między klientem a procesem aplikacji. Możliwa jest także obsługa wielu połączeń równocześnie. 
+Program serwera udostępnia kod strony \emph{WWW}, który uruchamiany jest przez przeglądarkę. Uruchamia on również aplikację graficzną opartą o framework \emph{Qt} oraz odpowiada za utworzenie połączenia między klientem a procesem aplikacji. Możliwa jest także obsługa wielu połączeń równocześnie. 
 Przy pomocy techniki wstrzykiwania kodu bibliotek linkowanych dynamicznie \emph{(ang. DLL injection)} oraz wewnętrznych mechanizmów biblioteki \emph{Qt}, użycie aplikacji nie wymaga ponownej kompilacji, zarówno samego frameworka \emph{Qt}, jak i uruchamianych aplikacji użytkowych.
 
-Aplikacja kliencka stworzona w postaci dynamicznej strony WWW pokrywa bardzo duży podzbiór funkcjonalności modułu graficznych interfejsów biblioteki \emph{Qt}. Wszelkie braki wynikają z niedoskonałości standardu HTML5, który wciąż jest mocno rozwijany.
+Aplikacja kliencka stworzona w postaci dynamicznej strony \emph{WWW} pokrywa bardzo duży podzbiór funkcjonalności modułu graficznych interfejsów biblioteki \emph{Qt}. Wszelkie braki wynikają z niedoskonałości standardu \emph{HTML5}, który wciąż jest mocno rozwijany.
 
 Projekt będzie kontynuowany w następujących kierunkach:
 \begin{itemize}
-  \item umożliwienie współpracy z aplikacjami opartymi o najnowszą bibliotekę \emph{Qt} w wersji \emph{5.0},
+  \item umożliwienie współpracy z aplikacjami opartymi o najnowszą bibliotekę \emph{Qt} w wersji 5.0,
   \item rozwinięcie zabezpieczeń --- autentykacja i autoryzacja klientów,
   \item stworzenie panelu administracyjnego serwera oraz nowego widoku głównego aplikacji,
   \item automatyzacja procesu instalacji,
-  \item utworzenie wersji serwera dla systemów \emph{Windows} oraz \emph{Mac OS},
+  \item utworzenie wersji serwera dla systemów Windows oraz Mac OS,
   \item rozwinięcie możliwości aplikacji klienckiej przy wykorzystaniu elementów technologii \emph{HTML5}, które będą dostępne w przyszłości.
 \end{itemize}
 
