Thesis - bolding in table

--- a/thesis/introduction/introduction.tex
+++ b/thesis/introduction/introduction.tex
@@ -17,7 +17,7 @@ Tablica \ref{tab:podzial} przedstawia podział podczas pisania rozdziałów prac
 \centering  
 \begin{tabular}{ |l|l|c|c|}
 \hline
-Rozdział & Podrozdział              & Jędrychowski & Spas   \\
+\textbf{Rozdział} & \textbf{Podrozdział}              & \textbf{Jędrychowski} & \textbf{Spas}   \\
 \hline
 \multicolumn{2}{|c|}{Wstęp} & - & całość \\
 \hline 
