--- a/thesis/problem_definition/communication.tex
+++ b/thesis/problem_definition/communication.tex
@@ -12,7 +12,7 @@ Do realizacji zadania komunikacji między klientem a serwerem stworzony został 
 
 \section{Komunikacja między klientem a aplikacją}
 
-Do rozwiązania tego problemu konieczne jest utworzenie ciągłego kanału komunikacyjnego między klientem a procesem aplikacji, za pomocą którego będzie możliwe przesyłanie informacji o wyglądzie interfejsu aplikacji oraz informowanie aplikacji o zdarzeniach generowanych przez użytkownika po stronie przeglądarki. Jako, że za cel przyjęte zostało założenie o nieingerowaniu bezpośrednio w kod skompilowanych już aplikacji, głównym założeniem jest skorzystanie z techniki wstrzykiwania kodu biblioteki dynamicznej do przestrzeni pamięciowej procesu aplikacji tuż przed jego uruchomieniem. Kod ten ma za zadanie utrzymanie połączenia oraz transmisję danych między klientem a aplikacją. Dokładny sposób użycia tej techniki jest przedstawiony w sekcji \ref{sec:ldpreload}. W zaprojektowanym rozwiązaniu komunikacja między aplikacją na serwerze a klientem jest bezpośrednia, z pominięciem procesu głównego serwera opisanego w poprzednim podrozdziale.
+Do rozwiązania tego problemu konieczne jest utworzenie ciągłego kanału komunikacyjnego między klientem a procesem aplikacji, za pomocą którego będzie możliwe przesyłanie informacji o wyglądzie interfejsu aplikacji oraz informowanie aplikacji o zdarzeniach generowanych przez użytkownika po stronie przeglądarki. Jako, że za cel przyjęte zostało założenie o nieingerowaniu bezpośrednio w kod skompilowanych już aplikacji, głównym założeniem jest skorzystanie z techniki wstrzykiwania kodu biblioteki dynamicznej do przestrzeni pamięciowej procesu aplikacji tuż przed jego uruchomieniem. Kod ten ma za zadanie utrzymanie połączenia oraz transmisję danych między klientem a aplikacją. Dokładny sposób użycia tej techniki jest przedstawiony w sekcji \ref{sec:ldpreload}. W zaprojektowanym rozwiązaniu komunikacja między aplikacją na serwerze a klientem jest bezpośrednia, z pominięciem procesu głównego serwera opisanego w poprzednim podrozdziale. Schemat działania komunikacji między klientem a aplikacją przedstawiają rysunki \ref{fig:arch-socket} oraz \ref{fig:arch-hook}.
 
 \begin{figure}[H]
 \centering
