--- a/thesis/theory/html.tex
+++ b/thesis/theory/html.tex
@@ -1,6 +1,6 @@
 \emph{HTML5} (ang. HyperText Markup Language) jest najnowszą wersją popularnego języka znaczników \emph{HTML}. Pojęcie to nie jest do końca jasne i oczywiste, ponieważ ta edycja języka niesie ze sobą nie tylko zmiany w znacznikach, ale bardzo mocno rozszerza możliwości stron WWW. Co więcej łączy się bezpośrednio z innymi technologiami takimi jak \emph{JavaScript} oraz \emph{CSS3} i nie jest w stanie bez nich istnieć. W związku z tym sama definicja \emph{HTML5} jako jedynie język znaczników jest niepełna. We wcześniejszych etapach samo konsorcjum W3 miało problemy z jasną definicją \emph{HTML5} i na krótki czas składowymi tej technologii był język \emph{CSS3} oraz \emph{SVG}. \cite{html5games}
 
-Grupa \emph{W3} opublikowała 17 grudnia pierwszą oficjalną specyfikację \emph{HTML5} \cite{html5w3}. Od tej pory do standardu nie będą dodawane nowe funkcjonalności, a jedynie poprawiane aktualnie istniejące. Wydanie rekomendacji przez instytucję jest planowane na rok 2014 \cite{plan2014}.
+Grupa \emph{W3} opublikowała 17 grudnia 2012 roku pierwszą oficjalną specyfikację \emph{HTML5} \cite{html5w3}. Od tej pory do standardu nie będą dodawane nowe funkcjonalności, a jedynie poprawiane aktualnie istniejące. Wydanie rekomendacji przez instytucję jest planowane na rok 2014 \cite{plan2014}.
 
 \emph{HTML5} jest rozwijany w ścisłej współpracy z twórcami najpopularniejszych przeglądarek. Została powołana specjalna grupa \emph{WHATWG} (Web Hypertext Application Technology Working Group), która skupia producentów takich jak Mozilla Foundation, Google, Opera Software oraz Apple Inc. Przeglądarki internetowe takie jak Mozilla Firefox, Google Chrome oraz Opera już teraz implementują w wersjach produkcyjnych większość z planowanych nowości przedstawionych w aktualnej specyfikacji \emph{HTML5}.
 
