--- a/thesis/theory/qt.tex
+++ b/thesis/theory/qt.tex
@@ -20,7 +20,7 @@ Aplikacje \emph{Qt} tworzone są w języku \emph{C++} rozszerzonym o dodatkowe s
 \item Maemo, MeeGo.
 \end{itemize}
 
-Biblioteka w wersji 5 jest aktualnie dostępny również na wszystkie popularne platformy mobilne takie jak Android, iOS i Windows 8.
+Biblioteka w wersji 5 jest aktualnie dostępna również na wszystkie popularne platformy mobilne takie jak Android, iOS i Windows 8.
 
 W tym podrozdziale zostaną przedstawione mechanizmy biblioteki \emph{Qt} wykorzystane przy tworzeniu projektu, o którym stanowi niniejsza praca. 
 
