--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -59,7 +59,7 @@
 }
 
 %+Title
-\title{Graficzne interfejsy aplikacji opartych o biblioteki Qt i KDE}
+\title{Graficzne interfejsy aplikacji opartych o biblioteki Qt i KDE z wykorzystaniem technologii HTML5 oraz JavaScript}
 \author{Jan Jędrychowski\\Łukasz Spas}
 \date{2012}
 \advisor{dr inż. Igor Wojnicki}
